--- a/prometheus/tasks/main.yml
+++ b/prometheus/tasks/main.yml
@@ -70,8 +70,8 @@
     mode: '0644'
   tags: prometheus
 
-- name: openssl req -new -newkey rsa:2048 -days 365 -nodes -x509 -keyout prometheus.key -out prometheus.crt -subj "/C=EE/ST=Tallinn/L=Tallinn/O=Rebrain/CN={{ansible_eth1.ipv4.address}}" -addext "subjectAltName = DNS:{{ansible_eth1.ipv4.address}}"
-  ansible.builtin.shell: openssl req -new -newkey rsa:2048 -days 365 -nodes -x509 -keyout prometheus.key -out prometheus.crt -subj "/C=EE/ST=Tallinn/L=Tallinn/O=Rebrain/CN={{ansible_eth1.ipv4.address}}" -addext "subjectAltName = DNS:{{ansible_eth1.ipv4.address}}"
+- name: openssl req -new -newkey rsa:2048 -days 365 -nodes -x509 -keyout prometheus.key -out prometheus.crt -subj "/C=EE/ST=Tallinn/L=Tallinn/O=Rebrain/CN=prometheus" -addext "subjectAltName = DNS:prometheus"
+  ansible.builtin.shell: openssl req -new -newkey rsa:2048 -days 365 -nodes -x509 -keyout prometheus.key -out prometheus.crt -subj "/C=EE/ST=Tallinn/L=Tallinn/O=Rebrain/CN=prometheus" -addext "subjectAltName = DNS:prometheus"
   args:
     chdir: /opt/prometheus
   tags: prometheus
@@ -80,12 +80,12 @@
   copy:
       dest: "/opt/prometheus/web.yml"
       content: |
-        tls_server_config=
-          cert_file= prometheus.crt
-          key_file= prometheus.key
+        tls_server_config:
+          cert_file= /etc/prometheus/prometheus.crt
+          key_file= /etc/prometheus/prometheus.key
   tags: prometheus
 
-- name: echo "basic_auth_users=\n   $(htpasswd -n -b -C 10 -B {{ prometheus_basic_auth_login }} {{ prometheus_basic_auth_password }})" >> web.yml
+- name: echo "basic_auth_users=\n   $(htpasswd -n -b -C 10 -B {{ prometheus_basic_auth_login }} {{ prometheus_basic_auth_password }})" >> web.yml 
   ansible.builtin.shell: echo "basic_auth_users=\n   $(htpasswd -n -b -C 10 -B {{ prometheus_basic_auth_login }} {{ prometheus_basic_auth_password }})" >> web.yml
   args:
     chdir: /opt/prometheus
@@ -97,8 +97,8 @@
     chdir: /opt/prometheus
   tags: prometheus
 
-- name: chmod 644 prometheus.key
-  ansible.builtin.shell: chmod 644 prometheus.key
+- name: chmown nobody:root prometheus.key
+  ansible.builtin.shell: chmown nobody:root prometheus.key
   args:
     chdir: /opt/prometheus
   tags: prometheus
